Add: alt text for the testimonial visitor image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h2 class="text-shadow"><span>TESTI</span>MONIAL</h2>
             </div>
             <div class="column-2 column-2-xs flex flex-center box-shadow rounded testimonial-card">
-                <img src="assets/img/testimonial-slider-asian-dude.webp">
+                <img src="assets/img/testimonial-slider-asian-dude.webp" alt="image of an asian site visitor">
                 <div>
                     <p class="testimonial-text">"Jeez. This got me up and running for a course!"</p>
                     <p><em>Kaneda Yamagata - CTO MeshBash</em></p>
