--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 
     <!--CONTACT SECTION START-->
     <section class="section-full background flex flex-center flex-column divider-space">
-        <img src="assets/img/shape-divider-top.svg">
+        <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container">
             <div class="column-2 text-white text-shadow">
                 <h2><span>KNOW</span> everything you need to!</h2>
             </div>
             <div class="column-2"></div>
         </div>
-        <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg">
+        <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the bottom shape divider">
     </section>
     <!--CONTACT SECTION END-->
 
