Add: alt text for footer social icons

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
             </div>
             <div class="column-2 column-2-xs flex">
                 <div class="social">
-                    <img class="social-icon" src="assets/img/instagram.svg">
-                    <img class="social-icon" src="assets/img/square-facebook.svg">
-                    <img class="social-icon" src="assets/img/square-twitter.svg">
-                    <img class="social-icon" src="assets/img/slack.svg">
+                    <img class="social-icon" src="assets/img/instagram.svg" alt="the instagram logo">
+                    <img class="social-icon" src="assets/img/square-facebook.svg" alt="the facebook logo">
+                    <img class="social-icon" src="assets/img/square-twitter.svg" alt="the twitter logo">
+                    <img class="social-icon" src="assets/img/slack.svg" alt="the slack logo">
                 </div>
             </div>
         </div>
