Add: noopener and __blank to nav links

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="headerbar__nav closed">
                 <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" alt="closes the mobile menu" aria-label="open mobile menu">
                 <ul>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html">BASICS</a></li>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html">MATERIALS</a></li>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/models.html">MODELS</a></li>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/help.html">HELP</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener" target="_blank">BASICS</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener" target="_blank">MATERIALS</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener" target="_blank">MODELS</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener" target="_blank">HELP</a></li>
                 </ul>
             </div>
         </nav>
