--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="headerbar">
             <div class="headerbar__images">
-                <img class="headerbar__logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo">
+                <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html"><img class="headerbar__logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo"></a>
                 <img class="headerbar__mobile" src="assets/img/bars-solid.svg" alt="opens the mobile menu">
             </div>
             <div class="headerbar__nav closed">
