--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <header>
         <nav class="headerbar">
             <div class="headerbar__images">
-                <a href="https://rebellionwebdesign.github.io/fab-forever"><img class="headerbar__logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo"></a>
-                <img class="headerbar__mobile" src="assets/img/bars-solid.svg" alt="opens the mobile menu">
+                <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="this links to the homepage"><img class="headerbar__logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo"></a>
+                <img class="headerbar__mobile" src="assets/img/bars-solid.svg" aria-label="this opens the mobile menu" alt="opens the mobile menu">
             </div>
             <div class="headerbar__nav closed">
                 <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" alt="closes the mobile menu" aria-label="open mobile menu">
