Fix: typos in aria labels for header nav

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="headerbar__nav closed">
                 <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" alt="closes the mobile menu" aria-label="open mobile menu">
                 <ul>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" aria label="this links to the basics page" rel="noopener" target="_blank">BASICS</a></li>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" label="this links to the materials page" rel="noopener" target="_blank">MATERIALS</a></li>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/models.html" label="this links to the models page" rel="noopener" target="_blank">MODELS</a></li>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/help.html" label="this links to the help page" rel="noopener" target="_blank">HELP</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" aria-label="this links to the basics page" rel="noopener" target="_blank">BASICS</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" aria-label="this links to the materials page" rel="noopener" target="_blank">MATERIALS</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/models.html" aria-label="this links to the models page" rel="noopener" target="_blank">MODELS</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/help.html" aria-label="this links to the help page" rel="noopener" target="_blank">HELP</a></li>
                 </ul>
             </div>
         </nav>
