Fix: typo in aria label for close icon on mobile menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <img class="headerbar__mobile" src="assets/img/bars-solid.svg" aria-label="this opens the mobile menu" alt="opens the mobile menu">
             </div>
             <div class="headerbar__nav closed">
-                <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" alt="closes the mobile menu" aria-label="open mobile menu">
+                <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" alt="closes the mobile menu" aria-label="close mobile menu">
                 <ul>
                     <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" aria-label="this links to the basics page" rel="noopener" target="_blank">BASICS</a></li>
                     <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" aria-label="this links to the materials page" rel="noopener" target="_blank">MATERIALS</a></li>
