Add: aria label for the cta button

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="column-2 column-2-xs">
                 <h1><span>NEW</span> to 3D Printing?</h1>
                 <p>Bring your ideas to life with our comprehensive roundup!</p>
-                <button>
+                <button aria-label="skip this page to content">
                     GET STARTED!
                 </button>
             </div>
