--- a/index.html
+++ b/index.html
@@ -21,16 +21,24 @@
     <header>
         <nav class="headerbar">
             <div class="headerbar__images">
-                <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="this links to the homepage"><img class="headerbar__logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo"></a>
-                <img class="headerbar__mobile" src="assets/img/bars-solid.svg" aria-label="this opens the mobile menu" alt="opens the mobile menu">
+                <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="this links to the homepage"><img
+                        class="headerbar__logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo"></a>
+                <img class="headerbar__mobile" src="assets/img/bars-solid.svg" aria-label="this opens the mobile menu"
+                    alt="opens the mobile menu">
             </div>
             <div class="headerbar__nav closed">
-                <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" alt="closes the mobile menu" aria-label="close mobile menu">
+                <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" alt="closes the mobile menu"
+                    aria-label="close mobile menu">
                 <ul>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" aria-label="this links to the basics page" rel="noopener" target="_blank">BASICS</a></li>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" aria-label="this links to the materials page" rel="noopener" target="_blank">MATERIALS</a></li>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/models.html" aria-label="this links to the models page" rel="noopener" target="_blank">MODELS</a></li>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/help.html" aria-label="this links to the help page" rel="noopener" target="_blank">HELP</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
+                            aria-label="this links to the basics page" rel="noopener" target="_blank">BASICS</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
+                            aria-label="this links to the materials page" rel="noopener" target="_blank">MATERIALS</a>
+                    </li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/models.html"
+                            aria-label="this links to the models page" rel="noopener" target="_blank">MODELS</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/help.html"
+                            aria-label="this links to the help page" rel="noopener" target="_blank">HELP</a></li>
                 </ul>
             </div>
         </nav>
@@ -43,9 +51,9 @@
             <div class="column-2 column-2-xs">
                 <h1><span>NEW</span> to 3D Printing?</h1>
                 <p>Bring your ideas to life with our comprehensive roundup!</p>
-                <button aria-label="skip this page to content">
-                    GET STARTED!
-                </button>
+                <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
+                    aria-label="this links to the basics page" rel="noopener" target="_blank"><button
+                        aria-label="skip this page to content">GET STARTED!</button></a>
             </div>
             <div class="column-2 column-2-xs">
                 <img src="assets/img/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
