Add: link to instagram on instagram social icon

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
             <div class="column-2 column-2-xs flex">
                 <div class="social">
-                    <img class="social-icon" src="assets/img/instagram.svg" alt="the instagram logo">
+                    <a href="https://www.instagram.com" rel="noopener" target="_blank"><img class="social-icon" src="assets/img/instagram.svg" alt="the instagram logo"></a>
                     <img class="social-icon" src="assets/img/square-facebook.svg" alt="the facebook logo">
                     <img class="social-icon" src="assets/img/square-twitter.svg" alt="the twitter logo">
                     <img class="social-icon" src="assets/img/slack.svg" alt="the slack logo">
