--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="column-2 column-2-xs flex">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"><img class="social-icon" src="assets/img/instagram.svg" alt="the instagram logo"></a>
-                    <img class="social-icon" src="assets/img/square-facebook.svg" alt="the facebook logo">
+                    <a href="https://www.facebook.com" rel="noopener" target="_blank"><img class="social-icon" src="assets/img/square-facebook.svg" alt="the facebook logo"></a>
                     <img class="social-icon" src="assets/img/square-twitter.svg" alt="the twitter logo">
                     <img class="social-icon" src="assets/img/slack.svg" alt="the slack logo">
                 </div>
