Add: link to twitter on twitter social icon

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"><img class="social-icon" src="assets/img/instagram.svg" alt="the instagram logo"></a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"><img class="social-icon" src="assets/img/square-facebook.svg" alt="the facebook logo"></a>
-                    <img class="social-icon" src="assets/img/square-twitter.svg" alt="the twitter logo">
-                    <img class="social-icon" src="assets/img/slack.svg" alt="the slack logo">
+                    <a href="https://www.twitter.com" rel="noopener" target="_blank"><img class="social-icon" src="assets/img/square-twitter.svg" alt="the twitter logo"></a>
+                    </a><img class="social-icon" src="assets/img/slack.svg" alt="the slack logo">
                 </div>
             </div>
         </div>
