Add: link to slack on slack social icon

--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
                 <p>An educational static website project</p>
             </div>
             <div class="column-2 column-2-xs flex">
-                <div class="social">
+                < class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"><img class="social-icon" src="assets/img/instagram.svg" alt="the instagram logo"></a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"><img class="social-icon" src="assets/img/square-facebook.svg" alt="the facebook logo"></a>
                     <a href="https://www.twitter.com" rel="noopener" target="_blank"><img class="social-icon" src="assets/img/square-twitter.svg" alt="the twitter logo"></a>
-                    </a><img class="social-icon" src="assets/img/slack.svg" alt="the slack logo">
+                    <a href="https://www.slack.com" rel="noopener" target="_blank"><img class="social-icon" src="assets/img/slack.svg" alt="the slack logo"></a>
                 </div>
             </div>
         </div>
