--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Fab Forever provides useful information to people interested in 3D printing">
     <meta name="keywords" content="3d printer, 3d printing, filament, 3d printing material, material, filament">
     <meta name="author" content="Daniel Stauffer">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="assets/css/media.css">
