Change: format document

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
             <div class="column-2 column-2-xs">
                 <h1><span>NEW</span> to 3D Printing?</h1>
                 <p>Bring your ideas to life with our comprehensive roundup!</p>
-                <button aria-label="skip this page to content"><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" aria-label="this links to the basics page" rel="noopener" target="_blank">GET STARTED!</a></button>
+                <button aria-label="skip this page to content"><a
+                        href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
+                        aria-label="this links to the basics page" rel="noopener" target="_blank">GET
+                        STARTED!</a></button>
             </div>
             <div class="column-2 column-2-xs">
                 <img src="assets/img/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
@@ -112,10 +115,18 @@
             </div>
             <div class="column-2 column-2-xs flex">
                 <div class="social">
-                    <a href="https://www.instagram.com" rel="noopener" target="_blank" aria-label="this link sends you to instagram"><img class="social-icon" src="assets/img/instagram.svg" alt="the instagram logo"></a>
-                    <a href="https://www.facebook.com" rel="noopener" target="_blank" aria-label="this link sends you to facebook"><img class="social-icon" src="assets/img/square-facebook.svg" alt="the facebook logo"></a>
-                    <a href="https://www.twitter.com" rel="noopener" target="_blank" aria-label="this link sends you to twitter"><img class="social-icon" src="assets/img/square-twitter.svg" alt="the twitter logo"></a>
-                    <a href="https://www.slack.com" rel="noopener" target="_blank" aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/slack.svg" alt="the slack logo"></a>
+                    <a href="https://www.instagram.com" rel="noopener" target="_blank"
+                        aria-label="this link sends you to instagram"><img class="social-icon"
+                            src="assets/img/instagram.svg" alt="the instagram logo"></a>
+                    <a href="https://www.facebook.com" rel="noopener" target="_blank"
+                        aria-label="this link sends you to facebook"><img class="social-icon"
+                            src="assets/img/square-facebook.svg" alt="the facebook logo"></a>
+                    <a href="https://www.twitter.com" rel="noopener" target="_blank"
+                        aria-label="this link sends you to twitter"><img class="social-icon"
+                            src="assets/img/square-twitter.svg" alt="the twitter logo"></a>
+                    <a href="https://www.slack.com" rel="noopener" target="_blank"
+                        aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/slack.svg"
+                            alt="the slack logo"></a>
                 </div>
             </div>
         </div>
