Fix: change button to link for semantics

--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
             <div class="column-2 column-2-xs">
                 <h1><span>NEW</span> to 3D Printing?</h1>
                 <p>Bring your ideas to life with our comprehensive roundup!</p>
-                <button aria-label="skip this page to content"><a class="text-white" 
-                        href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
-                        aria-label="this links to the basics page" rel="noopener" target="_blank">GET
-                        STARTED!</a></button>
+                <a class="text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" aria-label="this links to the basics page" rel="noopener" target="_blank">
+                    GET STARTED!
+                </a>
             </div>
             <div class="column-2 column-2-xs">
                 <img src="assets/img/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
