Change: text for testimonial section and card

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
     <section class="section-half flex flex-center">
         <div class="container flex container-xs flex-center">
             <div class="column-2 column-2-xs">
-                <h2 class="text-shadow"><span>TESTI</span>MONIAL</h2>
+                <h2 class="text-shadow"><span>HOW</span> we help people</h2>
             </div>
             <div class="column-2 column-2-xs flex flex-center box-shadow rounded testimonial-card">
                 <img src="assets/img/testimonial-slider-asian-dude.webp" alt="image of an asian site visitor">
                 <div>
-                    <p class="testimonial-text">"Jeez. This got me up and running for a course!"</p>
+                    <p class="testimonial-text">"Jeez. This got me up and running for a job interview!"</p>
                     <p><em>Kaneda Yamagata - CTO MeshBash</em></p>
                 </div>
             </div>
