--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Daniel Stauffer">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.svg">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="assets/css/media.css">
     <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
