Add: grid wrapper for about column

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
             <div class="column-2 text-white text-shadow">
                 <h2><span>3D</span>Printing resources for you!</h2>
             </div>
-            <div class="column-2"></div>
+            <div class="column-2">
+                <div class="grid-wrapper">
+                    
+                </div>
+            </div>
         </div>
         <img class="fdivider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the bottom shape divider">
     </section>
