--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
             </div>
             <div class="column-2">
                 <div class="grid-wrapper">
-                    
+                    <div class="grid grid-container">
+                        
+                    </div>
                 </div>
             </div>
         </div>
