Add: grid cards

--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
             <div class="column-2">
                 <div class="grid-wrapper">
                     <div class="grid grid-container">
-                        
+                        <div class="grid card"></div>
+                        <div class="grid card"></div>
+                        <div class="grid card"></div>
+                        <div class="grid card"></div>
                     </div>
                 </div>
             </div>
