--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <div class="column-2">
                 <div class="grid-wrapper">
                     <div class="grid grid-container">
-                        <div class="grid card"></div>
-                        <div class="grid card"></div>
-                        <div class="grid card"></div>
-                        <div class="grid card"></div>
+                        <div class="grid-card grid-card__background--basics">BASICS</div>
+                        <div class="grid-card grid-card__background--models">MODELS</div>
+                        <div class="grid-card grid-card__background--materials">MATERIALS</div>
+                        <div class="grid-card grid-card__background--help">HELP</div>
                     </div>
                 </div>
             </div>
