Add: flex-column-xs class to container

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!--ABOUT SECTION START-->
     <section class="section-full background-reverse flex flex-center flex-column divider-space">
         <img class="flip-x" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container flex flex-row flex-center-y">
+        <div class="container flex flex-row flex-center-y flex-column-xs">
             <div class="column-2 text-white text-shadow">
                 <h2><span>3D</span>Printing resources for you!</h2>
             </div>
