Add: grid container xs class

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="column-2">
                 <div class="grid-wrapper">
-                    <div class="grid grid-container">
+                    <div class="grid grid-container grid-container-xs">
                         <div class="grid-card grid-card__background--basics">BASICS</div>
                         <div class="grid-card grid-card__background--models">MODELS</div>
                         <div class="grid-card grid-card__background--materials">MATERIALS</div>
