Add column-2-xs class to about columns

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     <section class="section-full background-reverse flex flex-center flex-column divider-space">
         <img class="flip-x" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container flex flex-row flex-center-y flex-column-xs">
-            <div class="column-2 text-white text-shadow">
+            <div class="column-2 column-2-xs text-white text-shadow">
                 <h2><span>3D</span>Printing resources for you!</h2>
             </div>
-            <div class="column-2">
+            <div class="column-2 column-2-xs">
                 <div class="grid-wrapper">
                     <div class="grid grid-container grid-container-xs">
                         <div class="grid-card grid-card__background--basics">BASICS</div>
