--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <div class="column-2 column-2-xs">
                 <div class="grid-wrapper">
                     <div class="grid grid-container grid-container-xs">
-                        <div class="grid-card grid-card__background--basics">BASICS</div>
-                        <div class="grid-card grid-card__background--models">MODELS</div>
-                        <div class="grid-card grid-card__background--materials">MATERIALS</div>
-                        <div class="grid-card grid-card__background--help">HELP</div>
+                        <div class="grid-card grid-card__background--basics"><h3>BASICS</h3></div>
+                        <div class="grid-card grid-card__background--models"><h3>MODELS</h3></div>
+                        <div class="grid-card grid-card__background--materials"><h3>MATERIALS</h3></div>
+                        <div class="grid-card grid-card__background--help"><h3>HELP</h3></div>
                     </div>
                 </div>
             </div>
