Add: flex class to grid column

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="column-2 column-2-xs text-white text-shadow">
                 <h2><span>3D</span>Printing resources for you!</h2>
             </div>
-            <div class="column-2 column-2-xs">
+            <div class="column-2 column-2-xs flex">
                 <div class="grid-wrapper">
                     <div class="grid grid-container grid-container-xs">
                         <div class="grid-card grid-card__background--basics box-shadow"><h3>BASICS</h3></div>
