Add: wrapper element for contact form

--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@
             <div class="column-2 text-white text-shadow">
                 <h2><span>KNOW</span> everything you need to!</h2>
             </div>
-            <div class="column-2"></div>
+            <div class="column-2">
+                <div class="form-wrapper">
+                    
+                </div>
+            </div>
         </div>
         <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the bottom shape divider">
     </section>
