Add: flex class to contact container

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!--CONTACT SECTION START-->
     <section class="section-full background flex flex-center flex-column divider-space">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container">
+        <div class="container flex">
             <div class="column-2 text-white text-shadow">
                 <h2><span>KNOW</span> everything you need to!</h2>
             </div>
