Add: h3 with text to form

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div class="column-2">
                 <div class="form-wrapper">
-                    
+                    <h3>GOT QUESTIONS?</h3>
                 </div>
             </div>
         </div>
