--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
             <div class="column-2">
                 <div class="form-wrapper">
                     <h3>GOT QUESTIONS?</h3>
+                    <label for="fname">Your first name</label>
+                    <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
                 </div>
             </div>
         </div>
