--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
                     <label for="fname">Your first name *</label>
                     <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
                     <label for="lname">Your last name *</label>
-                    <input type="text" id="fname" name="lname" aria-label="Put your last name in here" required>
+                    <input type="text" id="lname" name="lname" aria-label="Put your last name in here" required>
+                    <label for="email">Your eMail address *</label>
+                    <input type="email" id="email" name="email" aria-label="Put your email address in here" required>
+                    <label for="textarea">Your message *</label>
+                    <textarea id="textarea" name="textarea" aria-label="Put your message in here" cols="35" rows="4" required>
                 </div>
             </div>
         </div>
