Add: box-shadow class to form wrapper

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <h2><span>KNOW</span> everything you need to!</h2>
             </div>
             <div class="column-2">
-                <div class="form-wrapper">
+                <div class="form-wrapper box-shadow">
                     <h3>GOT QUESTIONS?</h3>
                     <label for="fname">Your first name *</label>
                     <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
