Add: text-center class to form h3

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div class="column-2">
                 <div class="form-wrapper box-shadow">
-                    <h3>GOT QUESTIONS?</h3>
+                    <h3 class="text-center">GOT QUESTIONS?</h3>
                     <label for="fname">Your first name *</label>
                     <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
                     <label for="lname">Your last name *</label>
