--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
             <div class="column-2">
                 <div class="form-wrapper box-shadow">
                     <h3 class="text-center">GOT QUESTIONS?</h3>
-                    <label for="fname">Your first name *</label>
+                    <label for="fname">Your first name <span class="red-star">*</span></label>
                     <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
-                    <label for="lname">Your last name *</label>
+                    <label for="lname">Your last name <span class="red-star">*</span></label>
                     <input type="text" id="lname" name="lname" aria-label="Put your last name in here" required>
-                    <label for="email">Your eMail address *</label>
+                    <label for="email">Your eMail address <span class="red-star">*</span></label>
                     <input type="email" id="email" name="email" aria-label="Put your email address in here" required>
-                    <label for="textarea">Your message *</label>
+                    <label for="textarea">Your message <span class="red-star">*</span></label>
                     <textarea id="textarea" name="textarea" aria-label="Put your message in here" cols="35" rows="4" required>
                 </div>
             </div>
