--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <section class="section-full background flex flex-center flex-column divider-space">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container flex">
-            <div class="column-2 text-white text-shadow">
+            <div class="column-2 text-white text-shadow flex">
                 <h2><span>KNOW</span> everything you need to!</h2>
             </div>
             <div class="column-2">
